...
    <string name="weather_alert_low_temp">Low temperature</string>
    <string name="weather_alert_road_ice_and_snow">Road snow and ice</string>
    <string name="weather_alert_thunderstorm">Thunderstorm winds</string>
    <string name="weather_alert_time_now">Updated just now</string>
    <string name="weather_alert_tip">%1$s%2$s预警</string>
    <string name="weather_alert_title">Weather Warning</string>
    <string name="weather_c_icon_description">%1$d degrees Celsius</string>
    <string name="weather_city_list_delete_last_city_tips">keep at least one city</string>
    <string name="weather_current_day_text">Today</string>
    <string name="weather_f_icon_description">%1$d degrees Fahrenheit</string>
    <string name="weather_forecast_date">%1$s.%2$s</string>
    <string name="weather_forecast_ultraviolet_radiation">UV radiation</string>
    <string name="weather_forecast_wind_level"> Level</string>
    <string name="weather_hot_city">Popular Cities</string>
    <string name="weather_null">--</string>
    <string name="weather_pager_aqi_text">Air Quality </string>
...
