...
                <Button
                    android:id="@+id/btn_refresh"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/textview_search_empty_margin1"
                    android:background="@drawable/selector_small_btn_standard"
                    android:text="@string/weather_search_refresh"
                    android:textColor="@color/search_error_button_text_color"
                    android:textSize="@dimen/textview_search_error_button_size"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>
        </FrameLayout>
...
